src/test/ui/variance/variance-invariant-arg-trait-match.stderr
error[E0308]: mismatched types
  --> $DIR/variance-invariant-arg-trait-match.rs:10:5
   |
LL |     impls_get::<G,&'min i32>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Get<&'min i32>`
              found type `Get<&'max i32>`
note: the lifetime 'min as defined on the function body at 7:21...
  --> $DIR/variance-invariant-arg-trait-match.rs:7:21
   |
LL | fn get_min_from_max<'min, 'max, G>()
   |                     ^^^^
note: ...does not necessarily outlive the lifetime 'max as defined on the function body at 7:27
  --> $DIR/variance-invariant-arg-trait-match.rs:7:27
   |
LL | fn get_min_from_max<'min, 'max, G>()
   |                           ^^^^

error[E0308]: mismatched types
  --> $DIR/variance-invariant-arg-trait-match.rs:16:5
   |
LL |     impls_get::<G,&'max i32>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ lifetime mismatch
   |
   = note: expected type `Get<&'max i32>`
              found type `Get<&'min i32>`
note: the lifetime 'min as defined on the function body at 13:21...
  --> $DIR/variance-invariant-arg-trait-match.rs:13:21
   |
LL | fn get_max_from_min<'min, 'max, G>()
   |                     ^^^^
note: ...does not necessarily outlive the lifetime 'max as defined on the function body at 13:27
  --> $DIR/variance-invariant-arg-trait-match.rs:13:27
   |
LL | fn get_max_from_min<'min, 'max, G>()
   |                           ^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
